--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   background-size: cover;
   height: 100vh;
   max-width: 100vw;
+  color: #1f220f;
 }
 
 .text-center {
@@ -19,8 +20,15 @@ body {
   padding-left: 10px;
 }
 
+.main {
+  background-color: rgba(255, 255, 255, 0.4);
+  width: 50%;
+  margin: 0 auto;
+}
+
 h1 {
   margin-top: 2.5em;
+  padding-top: 1em;
   text-transform: uppercase;
 }
 
@@ -30,25 +38,30 @@ h1 {
   line-height: 1.25;
   text-align: center;
   white-space: nowrap;
-  vertical-align: middle;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  padding: 2rem;
-  font-size: 1rem;
+  padding: 1.5em;
+  font-size: 1.2em;
   margin-bottom: 0.5em;
+}
+
+.btn:hover {
+  box-shadow: 1px 1px 5px 3px rgba(63, 123, 123, 0.5);
 }
 
 .btn-primary {
   color: #fff;
-  background-color: #46484a;
+  background-color: #346F69;
   margin-bottom: 1rem;
   border-radius: 10%;
 }
 
 h3 {
   display: inline-block;
+  font-size: 1.5em;
+  margin: 0.5em;
 }
 /*.btn-active {
   -webkit-box-shadow: 1px 1px 5px 3px rgba(104,105,91,1);
