--- a/style.css
+++ b/style.css
@@ -22,8 +22,11 @@ body {
 
 .main {
   background-color: rgba(255, 255, 255, 0.4);
-  width: 50%;
+  width: 80%;
   margin: 0 auto;
+  @media (min-width 500px) {
+    width: 50%;
+  }
 }
 
 h1 {
@@ -55,7 +58,6 @@ h1 {
   color: #fff;
   background-color: #346F69;
   margin-bottom: 1rem;
-  border-radius: 10%;
 }
 
 h3 {
