--- a/style.css
+++ b/style.css
@@ -24,7 +24,10 @@ body {
   background-color: rgba(255, 255, 255, 0.4);
   width: 80%;
   margin: 0 auto;
-  @media (min-width 500px) {
+}
+
+@media (min-width: 500px) {
+  .main {
     width: 50%;
   }
 }
@@ -46,8 +49,9 @@ h1 {
       -ms-user-select: none;
           user-select: none;
   padding: 1.5em;
-  font-size: 1.2em;
+  font-size: 1em;
   margin-bottom: 0.5em;
+  border-radius: 20%;
 }
 
 .btn:hover {
@@ -62,6 +66,6 @@ h1 {
 
 h3 {
   display: inline-block;
-  font-size: 1.5em;
+  font-size: 2em;
   margin: 0.5em;
 }
